Resound/Assets/css/resound.css
body
{
    --fg: white;
    --bg: black;
    --discreet: rgba(255, 255, 255, 50%);
    --highlight: rgba(255, 255, 255, 10%);
    --contrast: rgba(255, 255, 255, 10%);
    --stealth: rgba(255, 255, 255, 15%);
    --card-bg: rgba(255, 255, 255, 10%);
    --input-background: rgba(128, 128, 128, 30%);
    color: white;
    padding-bottom: 10em;

    height: unset !important;
    max-height: unset !important;
}

.notifier-log
{
    color:  #343434 !important;
}

.menu
{
    --menu-background: rgba(0, 0, 0, 0.805);
    backdrop-filter: blur(8px);
}


option
{    
    font-family: "Inter";
    background-color: var(--input-background);
    color: black;
}

.giant
{
    font-size: 4em;
}

.album-cover
{
    object-fit: cover;
    overflow: hidden;
    aspect-ratio: 1/1;
}

.album-folder
{
    padding: .5em;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;
    gap: .5em;
}

.album-folder, .album-cover
{

    border: solid 1px var(--stealth);
}

.album-folder img
{
    aspect-ratio: 1/1;
    height: auto;
    max-width: 45%;
    flex: 1 1 0px;
}

.album-cover.thumbnail,
.album-folder.thumbnail
{
    min-width: 2em;
    width: 2em;
    max-width: 2em;

    min-height: 2em;
    height: 2em;
    max-height: 2em;
    border-radius: 3px;
}

.album-cover.small,
.album-folder.small
{
    min-width: 4em;
    width: 4em;
    max-width: 4em;

    min-height: 4em;
    height: 4em;
    max-height: 4em;
    border-radius: 4px;
}

.album-cover.medium,
.album-folder.medium
{
    min-width: 5em;
    width: 5em;
    max-width: 5em;

    min-height: 5em;
    height: 5em;
    max-height: 5em;
    border-radius: 6px;
}

.album-cover,
.album-folder
{
    min-width: 8em;
    width: 8em;
    max-width: 8em;

    min-height: 8em;
    height: 8em;
    max-height: 8em;
    border-radius: 8px;
}

.album-cover.big,
.album-folder.big
{
    min-width: 12em;
    width: 12em;
    max-width: 12em;

    min-height: 12em;
    height: 12em;
    max-height: 12em;
    border-radius: 10px;
}

@media only screen and (max-width: 1000px) {

    .album-cover.big,
    .album-folder.big
    {
        min-width: 16em;
        width: 16em;
        max-width: 16em;

        min-height: 16em;
        height: 16em;
        max-height: 16em;
        border-radius: 12px;
    }
}


.album-cover.no-radius
{
    border-radius: 0px;
}


@keyframes fade-in
{
    from { opacity: 0; }
    to { opacity: 1; }
}

.album-container
{
    animation: fade-in 200ms ease;
}

.scrollable.horizontal
{
    max-width: 100vw;
    padding-bottom: .5em;
}

.album-container
{
    width: 8em !important;
    min-width: 8em !important;
    max-width: 8em !important;
}
.album-container.medium
{
    width: 5em !important;
    min-width: 5em !important;
    max-width: 5em !important;
}
.album-container.small
{
    width: 3em !important;
    min-width: 3em !important;
    max-width: 3em !important;
}





.album-container .album-cover
{
    max-width: 100%;
}


.album-container *
{
    max-width: 100%;
    text-overflow: ellipsis;
    overflow: hidden;
}



.track-list, .track-list td
{
    border-collapse: collapse;
}

.track-list td,
.track-list th
{

    padding: .5em;
}

.track-list thead tr
{
    border-bottom: 1px solid var(--track-color, var(--blue));
}

.track-list tbody tr
{
    border-radius: 12px;
    transition: all 200ms ease;
    cursor: pointer;
}

.track-list tbody tr:hover,
.track-list tbody tr.playing
{
    background: var(--highlight);
    --fg: var(--track-color, var(--blue));
    color: var(--track-color, var(--blue));
}




.player
{
    position: fixed;
    bottom: 0;
    width: 100%;
    box-shadow: 0px -5px 10px rgba(0,0,0, 8%);
    padding: 1em;
    background: rgba(0,0,0, .5);
    backdrop-filter: blur(12px);
}

.player .previous
{
    transform: rotate(180deg);
}

.player button, .player-button
{
    color: var(--fg);
    padding: .5em;
    border-radius: 100%;
    background: none;
    border: solid 1px var(--stealth);
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 50ms ease;
    box-shadow: 0px 0px 0px rgba(0,0,0, 8%);
}

.player button:hover, .player-button:hover
{
    box-shadow: 0px 0px 12px rgba(0,0,0, 8%);
    background-color: rgba(255, 255, 255, 9%);
}


#screenSaverContent button
{
    font-size: 2em;
}

#playerVolumeInput
{
    appearance: slider-vertical;
}

#playerVolumeInput:focus
{
    outline: none;
}

body:not(.is-mobile).player
{
    align-items: center;
}

body.is-mobile #playerControls
{
    justify-content: space-evenly;
}

#screenSaver
{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    z-index: 10000;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
}

#screenSaverContent
{
    position: relative;
}

#screenSaver #screenSaverBackground
{
    position: absolute;
    width: 120vw;
    height: 120vh;
    filter: blur(18px) brightness(50%);
    object-fit: cover;
}

#screenSaverInfo
{
    color: white
}

body:not(.is-mobile) #screenSaverInfo
{
    padding: 1em;
}

@keyframes spinning {
    from { rotate: 0deg; }
    to { rotate: 360deg; }
}

#screenSaverCover
{
    width: 50%;
    height: 50%;
    aspect-ratio: 1/1;
    border-radius: 100%;
    animation: spinning infinite 12s linear;
    object-fit: cover;
}

@media only screen and (max-width: 1000px) {
    #vinylSection::after
    {
        width: 24px !important;
        height: 24px !important;
    }
}

#screenSaverCover:not(.currently-playing)
{
    animation-play-state: paused;
}

#vinylSection
{
    --size : 50vw;

    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;

    width: var(--size);
    height: var(--size);
    max-width: 500px;
    max-height: 500px;
}

#vinylSection::after
{
    position: absolute;
    content: '';
    width: 5%;
    height: 5%;
    border-radius: 100%;

    background: black;
    border: solid 1px #777;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}


#vinylSection .frequencyRythmCanvas
{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: var(--size);
    height: var(--size);
    max-width: 500px;
    max-height: 500px;
}

@media only screen and (max-width: 700px) {
    #vinylSection
    {
        --size : 90vw;
    }

}


.backgroundCoverImage
{
    min-height: 100vh;
    min-width: 100vw;

    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    width: 120vw;
    height: 120vw;

    object-fit: cover;

    filter: blur(18px) brightness(50%);
}


.navbar
{
    z-index: 6;
    background: linear-gradient(to bottom, #000A, #0000);
}

.navbar a
{
    padding: .5em;
}

.svg-link:hover,
.navbar a:hover
{
    color: var(--track-color, var(--blue)) !important;
}

#player,
#pageContent
{
    z-index: 5;
}

.backgroundCoverImage
{
    z-index: 1;
}


@media only screen and (max-width: 1000px) {
    #pageContent {
        padding: 0 1em !important;
    }
}




.player-progress
{
    position: relative;
    width: 100%;
    height: .5em;
    border: var(--track-color, var(--blue)) 1px solid;
    border-radius: 4px;
    background: transparent;
    transition: all 100ms ease;
}

.player-progress:hover
{
    filter: brightness(120%);
}

.player-progress .progress-bar
{
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    background: var(--track-color, var(--blue));
    transition: all 50ms ease;
}
@media only screen and (max-width: 1000px) {
    .player-progress
    {
        height: 1em !important;
    }
}


body.is-mobile .navbar
{
    background: black !important;
}




::-webkit-scrollbar {
    width: .5em;
    height: .5em;
}

/* Track */
::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: rgba(0,0,0, .5);
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: var(--track-color, var(--blue));
    border-radius: 10px;
    transition: all 100ms ease;
}



.like-button *
{
}

.like-button:not([liked]) .liked-svg     { display: none;  }
.like-button[liked]       .liked-svg     {  }

.like-button[liked]       .not-liked-svg { display: none; }
.like-button:not([liked]) .not-liked-svg {  }



.artist-picture
{
    width: 6em;
    border-radius: 100%;
}




.album-play-section 
{
    position: relative;
    flex: 1 1 0px;
    height: 6em;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding: 1em;
    overflow: hidden;

    cursor: pointer;

    border: none;
    border-radius: 12px;
    box-shadow: 0px 6px 12px #0003;
}

.album-play-section .cover 
{
    z-index: 1;
    position: absolute;
    width: 100%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.album-play-section .vignette 
{
    z-index: 2;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0%;
    left: 0%;
    background: linear-gradient(to bottom, #0004 40%, #000D);
}

.album-play-section .title 
{
    z-index: 3;
    font-size: 1.2em;
    font-weight: bolder;
    text-shadow: 0px 2px 4px #0007;
    max-width: 100%;
    text-overflow:ellipsis;
    overflow: hidden;
    word-break: break-all;
}

